SalesforceProject2/src/objects/diz_custom_object2__c.object
<CustomObject>
    <description>dizzy test</description>
    <fields>
        <fullName>Diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <label>Diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_currency5__c</fullName>
        <label>diz_currency5__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_currencyAAAS__c</fullName>
        <label>diz_currency5__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_datetime__c</fullName>
        <label>diz_datetime__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>diz_email__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_formula6__c</fullName>
        <formula>&apos;abc&apos;</formula>
        <label>diz_formula6__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diz_formula__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>diz_formula__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_location__c</fullName>
        <label>diz_location__c</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_number__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_percent2__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_percent2__c</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_percent5__c</fullName>
        <label>diz_percent5__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_percent__c</fullName>
        <description>test</description>
        <label>diz_percent__c</label>
        <precision>14</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_phone4__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone4__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phone5__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone5__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phonetest__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_text2r__c</fullName>
        <description>t
ese


t</description>
        <inlineHelpText>xxxx</inlineHelpText>
        <label>diz_text2__c</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diz_text3__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>testt</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_text3__c</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>diz_text4__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <label>diz_text4__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>test

test</description>
        <inlineHelpText>tst</inlineHelpText>
        <label>diz_text__c</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>diz_url__c</fullName>
        <description>test</description>
        <label>diz_url__c</label>
        <type>Url</type>
    </fields>
    <label>diz_custom_object2</label>
    <nameField>
        <label>diz_custom_object2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>diz_custom_object2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>